вынес dto в shared-library, реорганизовал email сервис, сделал мапперы